# agent-messenger

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SPEC_v0.6.md  _migrate_v06.py  _patch_v5_full.py  _patch_v5_tables.py  agent-messenger.service  config.yaml  docker-compose.yml  pyproject.toml
client/: __init__.py  cli.py  sdk.py
dashboard/: app.js  index.html  styles.css
server/: __init__.py  auth.py  db.py  db_accessor.py  main.py  schemas.py  schemas_v06.py  security.py  websocket.py
server/routes/: __init__.py  agents.py  auth.py  bookmarks.py  broadcast.py  channels.py  conversations.py  custom_emojis.py  embeds.py  event_subscriptions.py  files.py  mentions.py  messages.py  notification_prefs.py  pins.py  polls.py  read_cursors.py  roles.py  scheduled_messages.py  slash_commands.py  translations.py  v06_extended.py  webhooks.py
static/: dashboard.html
tests/: test_auth.py  test_integration.py  test_security.py  test_server.py  test_v06_features.py
