[project]
name = "agent-messenger"
version = "0.1.0"
description = "Inter-agent communication platform with web dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
agent-messenger-server = "server.main:main"
agent-messenger-cli = "client.cli:main"
